# hexlet-django-blog

./: Makefile  README.md  pyproject.toml  setup.cfg
hexlet_django_blog/: .admin.py.swp  settings.py  urls.py  views.py
hexlet_django_blog/Clips/: apps.py  models.py  task description.md
hexlet_django_blog/Clips/migrations/: 0001_initial.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_remove_article_timestamp_article_created_at.py
hexlet_django_blog/article/templates/: article.html
hexlet_django_blog/articles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/articles/migrations/: 0001_initial.py  0002_article_created_at.py  0003_alter_article_body.py
hexlet_django_blog/articles/templates/: articles.html
hexlet_django_blog/categories/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/categories/migrations/: 0001_initial.py  0002_category_state.py
hexlet_django_blog/categories/templates/: categories.html
hexlet_django_blog/islands/: apps.py  models.py
hexlet_django_blog/islands/migrations/: 0001_initial.py
hexlet_django_blog/projects/: apps.py  models.py
hexlet_django_blog/projects/migrations/: 0001_initial.py
hexlet_django_blog/templates/: 404.html  about.html  articles.html  base.html  categories.html  comment.html  details.html  index.html  layout.html  messages.html  navigation.html
hexlet_django_blog/templates/article/: index.html
hexlet_django_blog/templates/articles/: article.html  (+3 more)
(+4 files in other folders)
