[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["LeonidBabkin <Babkinleo@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
