[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["LeonidBabkin <Babkinleo@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-bootstrap4 = "^22.3"
tzdata = "^2022.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
